--- a/src/main/resources/templates/se/test1.html
+++ b/src/main/resources/templates/se/test1.html
@@ -39,7 +39,8 @@
     .searchButton {
         border: 0;
         background-color: transparent;
-        margin-top: 8px;
+        margin-top: 7px;
+        margin-right: 2px;
         opacity: 0.9;
     }
 
@@ -48,7 +49,7 @@
     }
 
     .searchBar {
-        /* height: 40px; */
+        height: 35px;
         padding: 4px;
         padding-top: 8px;
         border: 1px solid #204710;
@@ -156,7 +157,6 @@
 
     .searchBar2 {
         padding-left: 35px;
-        /* width: 1100px; */
         height: 45px;
         background-color: #f0ede8;
         border: 0px solid #97a099;
@@ -225,24 +225,28 @@
             
             <div class="myPage col d-flex align-items-center flex-row-reverse">
                 <div class="row d-flex justify-content-end">
-                    <div class="col-auto">
-                        <a href="#">로그아웃</a>
-                    </div>
-                    <div class="col-auto">
-                        <a href="#">
-                            마이페이지
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" style="fill: #dddddd;"><path d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"></path></svg>
-                        </a>
-                    </div>
-                    <!-- <div class="col-auto">
-                        <a href="#">로그인</a>
-                    </div>
-                    <div class="col-auto">
-                        <a href="#">회윈가입</a>
-                    </div>
-                    <div class="col-auto m-0 p-0">
-                        <a href="#"><?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 32 32" height="16px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="16px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><polyline fill="none" points="   649,137.999 675,137.999 675,155.999 661,155.999  " stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><polyline fill="none" points="   653,155.999 649,155.999 649,141.999  " stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><polyline fill="none" points="   661,156 653,162 653,156  " stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/></g><path d="M29.7,2.767C29.593,2.317,29.189,2,28.728,2c-0.002,0-0.004,0-0.006,0c-5.267,0.033-18.075,0.916-23.246,8.38  c-2.686,3.878-2.917,8.913-0.687,14.965c0.017,0.047,0.052,0.079,0.075,0.122C4.067,27.44,3.758,28.753,3.75,28.79  c-0.116,0.54,0.229,1.072,0.769,1.188C4.589,29.993,4.659,30,4.729,30c0.461,0,0.876-0.321,0.977-0.79  c0.021-0.102,2.569-10.373,11.577-16.378c0.46-0.306,0.584-0.927,0.277-1.387s-0.927-0.585-1.387-0.277  c-5.108,3.405-8.254,8.008-10.104,11.656c-1.324-4.578-0.977-8.377,1.052-11.305c3.993-5.764,13.464-7.154,19.181-7.448  C25.072,5.872,23.728,9.174,23.728,15c0,3.12-0.885,5.522-2.629,7.14c-2.796,2.591-7.338,2.834-10.66,2.584  c-0.552-0.045-1.031,0.371-1.073,0.922c-0.042,0.55,0.371,1.03,0.921,1.072c0.665,0.051,1.375,0.082,2.113,0.082  c3.382,0,7.327-0.663,10.058-3.194c2.17-2.011,3.27-4.906,3.27-8.605c0-9.099,3.43-11.096,3.447-11.105  C29.591,3.687,29.809,3.219,29.7,2.767z"/></svg></a>
-                    </div> -->
+                    <!-- <th:block th:if="${customerId} != null"> -->
+                        <div class="col-auto">
+                            <a href="#">로그아웃</a>
+                        </div>
+                        <div class="col-auto">
+                            <a href="#">
+                                마이페이지
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" style="fill: #dddddd;"><path d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"></path></svg>
+                            </a>
+                        </div>
+                    <!-- </th:block> -->
+                    <!-- <th:block th:if="${customerId} == null">
+                        <div class="col-auto">
+                            <a href="#">로그인</a>
+                        </div>
+                        <div class="col-auto">
+                            <a href="#">회원가입</a>
+                        </div>
+                        <div class="col-auto m-0 p-0">
+                            <a href="#"><?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 32 32" height="16px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="16px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><polyline fill="none" points="   649,137.999 675,137.999 675,155.999 661,155.999  " stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><polyline fill="none" points="   653,155.999 649,155.999 649,141.999  " stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/><polyline fill="none" points="   661,156 653,162 653,156  " stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"/></g><path d="M29.7,2.767C29.593,2.317,29.189,2,28.728,2c-0.002,0-0.004,0-0.006,0c-5.267,0.033-18.075,0.916-23.246,8.38  c-2.686,3.878-2.917,8.913-0.687,14.965c0.017,0.047,0.052,0.079,0.075,0.122C4.067,27.44,3.758,28.753,3.75,28.79  c-0.116,0.54,0.229,1.072,0.769,1.188C4.589,29.993,4.659,30,4.729,30c0.461,0,0.876-0.321,0.977-0.79  c0.021-0.102,2.569-10.373,11.577-16.378c0.46-0.306,0.584-0.927,0.277-1.387s-0.927-0.585-1.387-0.277  c-5.108,3.405-8.254,8.008-10.104,11.656c-1.324-4.578-0.977-8.377,1.052-11.305c3.993-5.764,13.464-7.154,19.181-7.448  C25.072,5.872,23.728,9.174,23.728,15c0,3.12-0.885,5.522-2.629,7.14c-2.796,2.591-7.338,2.834-10.66,2.584  c-0.552-0.045-1.031,0.371-1.073,0.922c-0.042,0.55,0.371,1.03,0.921,1.072c0.665,0.051,1.375,0.082,2.113,0.082  c3.382,0,7.327-0.663,10.058-3.194c2.17-2.011,3.27-4.906,3.27-8.605c0-9.099,3.43-11.096,3.447-11.105  C29.591,3.687,29.809,3.219,29.7,2.767z"/></svg></a>
+                        </div>
+                    </th:block> -->
                 </div>
             </div>
         </div>
@@ -255,17 +259,23 @@
             <div class="col-auto d-flex align-items-center m-0 ps-5 pe-2">
                 <a href="#"><img th:src="@{/images/se/logo2.png}" style="height: 45px;"></a>
             </div>
-            <div class="col d-flex position-relative">
-                <input class="searchBar2 w-100" type="text" name="search" placeholder="검색어">
-                <button class="position-absolute searchButton2" type="submit">
-                    <i class="fa-solid fa-magnifying-glass fa-sm" style="color: #204710;"></i>
-                </button>
+            <div class="col">
+                <form th:action="@{/customer/item/selectlist.do}" method="get" class="d-flex position-relative">
+                    <input class="searchBar2 w-100" type="text" name="search" placeholder="검색어">
+                    <button class="position-absolute searchButton2" type="submit">
+                        <i class="fa-solid fa-magnifying-glass fa-sm" style="color: #204710;"></i>
+                    </button>
+                </form>
             </div>
             <div class="col-auto d-flex align-items-center pe-5 header2Button">
-                <a href="#">마이페이지</a>
-                <a href="#">로그아웃</a>
-                <!-- <a href="#">로그인</a> -->
-                <!-- <a href="#">회원가입</a> -->
+                <!-- <th:block th:if="${customerId} != null"> -->
+                    <a href="#">마이페이지</a>
+                    <a href="#">로그아웃</a>
+                <!-- </th:block> -->
+                <!-- <th:block th:if="${customerId} == null">
+                    <a href="#">로그인</a>
+                    <a href="#">회원가입</a>
+                </th:block> -->
             </div>
         </div>
         <div id="headerLine2"></div>
@@ -274,7 +284,7 @@
 
     <!-- 카테고리 -->
     <div class="container mb-5"><!-- style="position: fixed;" -->
-        <div class="row navbar-collapse p-3" id="navbarContent"> <!-- 처음에 접은 상태 => class에 collapse 추가 -->
+        <div class="row collapse navbar-collapse p-3" id="navbarContent"> <!-- 처음에 접은 상태 => class에 collapse 추가 -->
         </div>
     </div> 
     </div>  
@@ -335,11 +345,13 @@
             }
             str += 
             `<div class="col my-auto mt-3 position-relative">` +
-                `<div class="row d-flex justify-content-end">` +
-                    `<input class="searchBar" type="text" name="search" placeholder="검색어">` +
-                    `<button class="col-2 position-absolute searchButton" type="submit">` +
-                        `<i class="fa-solid fa-magnifying-glass fa-sm" style="color: #204710;"></i>` +
-                    `</button>` +
+                `<div class="row mx-auto d-flex justify-content-end">` +
+                    `<form action="/SOBUN/customer/item/selectlist.do" method="get" class="d-flex position-relative flex-row-reverse">` + 
+                        `<input class="searchBar w-100" type="text" name="search" placeholder="검색어">` +
+                        `<button class="position-absolute searchButton" type="submit">` +
+                            `<i class="fa-solid fa-magnifying-glass fa-sm" style="color: #204710;"></i>` +
+                        `</button>` +
+                    `</form> ` +
                 `</div>` +
             `</div>`;
             console.log(str);
