--- a/src/main/resources/templates/km/customer/footer.html
+++ b/src/main/resources/templates/km/customer/footer.html
@@ -98,7 +98,13 @@
             width: 1120px;
             max-width: none !important;
         }
-        
+        #footer2 {
+            background-image: url(../../../static/images/km/footer.png);
+        }
+
+        footer a {
+            text-decoration: none;
+        }
     </style>
 </head>
 
@@ -126,9 +132,9 @@
                         <img src="../../../static/images/se/logo1.png" class="footer2_logo" width="180px" >
                         <div class="footer_text1">
                             상호명 : (주) 소분소분 | 대표 : 홍길동<br>
-                            주소 : 55075 전라북도 전주시 완산구 호동길 24 (삼천동3가) 육육걸즈<br>
-                            통신판매업신고 : 2013-전주완산-0303 | 사업자등록번호 : 402-86-03809<br>
-                            개인정보관리책임자 : 홍길동 | 제휴/협력문의 : 66girls01@daum.net
+                            주소 : 18548 부산시 남구 신선로 365<br>
+                            <!-- 통신판매업신고 : 2013-전주완산-0303 | 사업자등록번호 : 402-86-03809<br> -->
+                            개인정보관리책임자 : 홍길동 | 제휴/협력문의 : sobun@gmail.com
                         </div>
                     </div>
                     <div class="col">
