--- a/src/main/resources/templates/km/customer/footer.html
+++ b/src/main/resources/templates/km/customer/footer.html
@@ -9,6 +9,8 @@
     <!-- 3. Font Awesome ICON용 CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../../../static/css/bootstrap.min.css">
+
+<th:block th:fragment="footerCSS">
     <style>
 
         @import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
@@ -74,14 +76,14 @@
         }
         #footer2 {
             height: 200px;
-            padding-top: 30px;
+            padding-top: 45px;
         }
         #footer2 .footer2_logo {
             margin-bottom: 10px;
         }
         .footer_text1, .footer_text2 *, .footer_text3 *, .footer_text4 * {
             font-size: 13px;
-            color: rgb(124, 124, 124);
+            color: rgb(49, 49, 49);
         }
         #footer3 {
             background-color: rgb(236, 236, 236); 
@@ -98,14 +100,15 @@
             width: 1120px;
             max-width: none !important;
         }
-        #footer2 {
+        /* #footer2 {
             background-image: url(../../../static/images/km/footer.png);
-        }
+        } */
 
         footer a {
             text-decoration: none;
         }
     </style>
+</th:block>
 </head>
 
 <body id='wrapper'>
@@ -115,7 +118,7 @@
         </div>
     </div>
 
-
+<th:block th:fragment="footerHTML">
     <footer class="container-fluid">
         <div id="footer1">
             <div class="footer-width">
@@ -125,15 +128,14 @@
                         <p>이용안내</p>
             </div>
         </div>
-        <div id="footer2">
+        <div id="footer2"  th:style="'background-image:url('+ @{/images/km/footer.png} +');'">
             <div class="footer-width">
                 <div class="row">
                     <div class="col-5">
-                        <img src="../../../static/images/se/logo1.png" class="footer2_logo" width="180px" >
+                        <img th:src="@{/images/se/logo1.png}" class="footer2_logo" width="180px" >
                         <div class="footer_text1">
                             상호명 : (주) 소분소분 | 대표 : 홍길동<br>
                             주소 : 18548 부산시 남구 신선로 365<br>
-                            <!-- 통신판매업신고 : 2013-전주완산-0303 | 사업자등록번호 : 402-86-03809<br> -->
                             개인정보관리책임자 : 홍길동 | 제휴/협력문의 : sobun@gmail.com
                         </div>
                     </div>
@@ -195,6 +197,7 @@
             </div>   
         </div>
     </footer>
+</th:block>
 
     <!-- Font Awesome ICON용 스크립트 CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
