--- a/src/main/resources/templates/km/customer/footer.html
+++ b/src/main/resources/templates/km/customer/footer.html
@@ -43,18 +43,21 @@
             height: 100%;
         }
 
+         */
+
         body {
             position: relative;
-            min-height: 100%;
-        } */
+            min-height: 100vh;
+        }
 
         footer {
-            position: absolute;
-            bottom: 0;
+            position: absolute !important;
+            bottom: 0 !important;
+
             max-width: 3000px;
             padding-left: 0 !important;  
             padding-right: 0 !important;
-            
+            /* margin-top: 5000px; */
         }
 
         footer > * {
@@ -69,6 +72,8 @@
             height: 50px;
             border-top: 1.5px solid #d4d4d4;
             border-bottom: 1.5px solid #d4d4d4;
+            /* background-color: #f1f1ed; */
+            background-color: rgba(255, 255, 255, 0.9);
         }
         #footer1 p {
             display: inline-block;
@@ -77,6 +82,8 @@
         #footer2 {
             height: 200px;
             padding-top: 45px;
+            background-repeat : no-repeat;
+            background-size : cover;    
         }
         #footer2 .footer2_logo {
             margin-bottom: 10px;
@@ -87,7 +94,7 @@
         }
         #footer3 {
             background-color: rgb(236, 236, 236); 
-            height: 50px;
+            height: 40px;
         }
         #footer3 * {
             font-size: 12px;
@@ -112,14 +119,10 @@
 </head>
 
 <body id='wrapper'>
-    <div>
-        <div>
-            content
-        </div>
-    </div>
 
 <th:block th:fragment="footerHTML">
     <footer class="container-fluid">
+        
         <div id="footer1">
             <div class="footer-width">
                         <p>회사소개</p>
@@ -196,6 +199,7 @@
                 Copyright &copy; <strong>소분소분</strong> All right reserved. Design by PKNU.
             </div>   
         </div>
+        
     </footer>
 </th:block>
 
