--- a/src/main/resources/templates/se/header.html
+++ b/src/main/resources/templates/se/header.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
-    <div class="headerAll" th:fragment="headerCSS">
+    <th:block th:fragment="headerCSS">
         <!-- font-awesome CDN -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <style>
@@ -228,7 +228,7 @@
             color: white;
         }
         </style>
-        </div>
+    </th:block>
 </head>
 <body>
     <div class="headerAll" th:fragment="headerHTML">
