--- a/src/main/resources/templates/jk/seller/index.html
+++ b/src/main/resources/templates/jk/seller/index.html
@@ -22,10 +22,8 @@
     <!-- Simple DataTable CDN -->
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
     <!-- CSS -->
-    <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/seller.css}'>
-
+    <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller.css}'>
 </head>
-
 <body class="sb-nav-fixed">
     <!-- 네비게이션 영역 -->
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -74,9 +72,7 @@
     <div id="layoutTotal">
         <!-- 전체화면 > 좌측 메뉴 영역(사이드바) -->
         <div id="layoutLeftSide">
-            <iframe src="./navbar.html"></iframe>
-            <!-- <object type="text/html" data="navbar.html"></object> -->
-            <!-- <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         
@@ -95,6 +91,7 @@
                                 <a class="nav-link" href="#!">탈퇴하기</a>
                             </nav>
                         </div>
+
                         <div class="sb-sidenav-menu-heading">주문배송 조회하기</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#collapseLayouts2" aria-expanded="false" aria-controls="collapseLayouts2">
@@ -109,18 +106,28 @@
                                 <a class="nav-link" href="#!">배송</a>
                             </nav>
                         </div>
-                        <div class="sb-sidenav-menu-heading">물품관리페이지</div>
 
-                        <a class="nav-link" href="#!">
-                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                            물품정보
+                        <div class="sb-sidenav-menu-heading">물품관리페이지</div>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#collapseLayouts3" aria-expanded="false" aria-controls="collapseLayouts3">
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                            물품
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
+                        <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
+                            data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="#!">등록</a>
+                                <a class="nav-link" href="#!">관리</a>
+                            </nav>
+                        </div>
+
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="sample">환영합니다, ### 님!</div>
                 </div>
-            </nav> -->
+            </nav>
         </div>
         <!-- 전체화면 > 우측 메인화면 영역 -->
         <div id="layoutContent">
@@ -168,8 +175,6 @@
 
 
     <script>
-        
-
         $(document).ready(function () {
             const sidebarToggle = $('#sidebarToggle');
             if (sidebarToggle) {
