--- a/src/main/resources/templates/seller/iteminsert.html
+++ b/src/main/resources/templates/seller/iteminsert.html
@@ -76,7 +76,7 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-
+                        
                         <div class="sb-sidenav-menu-heading">마이페이지</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
@@ -92,6 +92,7 @@
                                 <a class="nav-link" href="#!">탈퇴하기</a>
                             </nav>
                         </div>
+
                         <div class="sb-sidenav-menu-heading">주문배송 조회하기</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#collapseLayouts2" aria-expanded="false" aria-controls="collapseLayouts2">
@@ -106,12 +107,22 @@
                                 <a class="nav-link" href="#!">배송</a>
                             </nav>
                         </div>
-                        <div class="sb-sidenav-menu-heading">물품관리페이지</div>
 
-                        <a class="nav-link" th:href="@{/admin/insert.do}">
-                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                            물품정보
+                        <div class="sb-sidenav-menu-heading">물품관리페이지</div>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#collapseLayouts3" aria-expanded="false" aria-controls="collapseLayouts3">
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                            물품
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
+                        <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
+                            data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="#!">등록</a>
+                                <a class="nav-link" href="#!">관리</a>
+                            </nav>
+                        </div>
+
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
@@ -122,11 +133,18 @@
         <!-- 전체화면 > 우측 메인화면 영역 -->
         <div id="layoutContent">
             <main>
-                <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
+                <div class="container-fluid px-4" style="margin: 10px; padding-top: 20px;"> <!-- 옆쪽에 딱 붙음. -->
 
 
                     <h3>물품등록</h3>
-                    <!-- <input type="text" > -->
+                    <hr>
+                    물품명 : <input type="text" name="name"><br>
+                    가격 : <input type="text" name="price"><br>
+                    수량 : <input type="text" name="quantity"><br>
+                    사업자번호 : <input type="text" name="regno"><br>
+                    대분류
+                    소분류 : <input type="text" name="scategorycode"><br>
+                    <input type="submit" value="등록"><br>
 
 
                 </div>
