--- a/src/main/resources/templates/se/customer/home.html
+++ b/src/main/resources/templates/se/customer/home.html
@@ -23,22 +23,18 @@
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
     <div style="padding-bottom: 300px;">
         
-        <div>
+        <!-- <div>
             <h3>Customer Home</h3>
             <a th:href="@{join.do}">회원가입</a>
             <a th:href="@{login.do}">로그인</a>
             <hr>
             <a th:href="@{select.do}">회원정보</a>
-        </div>
+        </div> -->
 
     </div>
 
     <!-- footer -->
     <th:block th:replace="~{/km/customer/footer :: footerHTML}"></th:block>
 
-
-
-    <!-- script-->
-    
 </body>
 </html>
