--- a/src/main/resources/templates/mj/seller/iteminsert.html
+++ b/src/main/resources/templates/mj/seller/iteminsert.html
@@ -35,7 +35,7 @@
                     <path
                         d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0Zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708ZM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11Z" />
                 </svg> -->
-            <img src="../images/logo1.png" style="width: 80px;" />
+            <img src="../images/mj/logo1.png" style="width: 80px;" />
             <strong>판매자 페이지</strong>
         </a>
 
@@ -118,7 +118,7 @@
                         <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#!">등록</a>
+                                <a class="nav-link" href="@{/seller/item/management.do}">등록</a>
                                 <a class="nav-link" href="#!">관리</a>
                             </nav>
                         </div>
@@ -138,13 +138,15 @@
 
                     <h3>물품등록</h3>
                     <hr>
-                    물품명 : <input type="text" name="name"><br>
-                    가격 : <input type="text" name="price"><br>
-                    수량 : <input type="text" name="quantity"><br>
-                    사업자번호 : <input type="text" name="regno"><br>
-                    대분류
-                    소분류 : <input type="text" name="scategorycode"><br>
-                    <input type="submit" value="등록"><br>
+                    <form th:action="@{/seller/item/insert.do}" method="post">
+                        물품명 : <input type="text" name="name"><br>
+                        가격 : <input type="text" name="price"><br>
+                        수량 : <input type="text" name="quantity"><br>
+                        사업자번호 : <input type="text" name="regNo"><br>
+                        대분류 
+                        소분류 : <input type="text" name="scategoryCode"><br>
+                        <input type="submit" value="등록"><br>
+                    </form>
 
 
                 </div>
