--- a/src/main/resources/templates/se/customer/header.html
+++ b/src/main/resources/templates/se/customer/header.html
@@ -289,7 +289,7 @@
         <header id="header2" class="container-fluid">
             <div class="row p-3">
                 <div class="col-auto d-flex align-items-center m-0 ps-5 pe-2">
-                    <a href="#"><img th:src="@{/images/se/logo2.png}" style="height: 45px;"></a>
+                    <a href="#"><img th:src="@{/images/gr/logotest.png}" style="height: 45px;"></a>
                 </div>
                 <div class="col">
                     <form th:action="@{/customer/item/selectlist.do}" method="get" class="d-flex position-relative">
