--- a/src/main/resources/static/css/km/noneed_order/style.css
+++ b/src/main/resources/static/css/km/noneed_order/style.css
@@ -177,72 +177,11 @@ ol {
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 12px 30px;
-	border-radius: 50px;
+	/* border-radius: 50px; */
 }
 
-/* Preloder */
 
-/* #preloder {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	z-index: 999999;
-	background: #ffffff;
-} */
 
-.loader {
-	/* width: 40px;
-	height: 40px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-top: -13px;
-	margin-left: -13px;
-	border-radius: 60px;
-	animation: loader 0.8s linear infinite;
-	-webkit-animation: loader 0.8s linear infinite; */
-}
-
-@keyframes loader {
-	0% {
-		-webkit-transform: rotate(0deg);
-		transform: rotate(0deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-	50% {
-		-webkit-transform: rotate(180deg);
-		transform: rotate(180deg);
-		border: 4px solid #673ab7;
-		border-left-color: transparent;
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-}
-
-@-webkit-keyframes loader {
-	0% {
-		-webkit-transform: rotate(0deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-	50% {
-		-webkit-transform: rotate(180deg);
-		border: 4px solid #673ab7;
-		border-left-color: transparent;
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-}
 
 .spacial-controls {
 	position: fixed;
@@ -2326,14 +2265,14 @@ ol {
 	font-weight: 600;
 	text-transform: uppercase;
 	border-bottom: 1px solid #e1e1e1;
-	padding-bottom: 20px;
-	margin-bottom: 25px;
+	padding-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .checkout__form .checkout__form__input p {
 	color: #444444;
 	font-weight: 500;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 
 .checkout__form .checkout__form__input p span {
@@ -2485,9 +2424,9 @@ ol {
 
 .checkout__order__total {
 	padding-top: 12px;
-	border-bottom: 1px solid #d7d7d7;
+	/* border-bottom: 1px solid #d7d7d7; */
 	padding-bottom: 10px;
-	margin-bottom: 25px;
+	margin-bottom: 10px;
 }
 
 .checkout__order__total ul li {
