--- a/src/main/resources/templates/se/customer/join.html
+++ b/src/main/resources/templates/se/customer/join.html
@@ -1,34 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Join</title>
+    <title>새로운 1인가구 공구문화 - 소분소분</title>
+    <link rel="icon" th:href="@{/images/se/sobun.ico}">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <style>
-        input {
-            margin-bottom: 10px;
-        }
-    </style>
-</head>
-<body class="container">
-    <div>
-        <h3>고객용 회원가입</h3>
-        <a th:href="@{/customer/login.do}">로그인</a>
-        <hr>
+    <!-- font-awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <th:block th:replace="~{/se/customer/header :: headerCSS}"></th:block>
+    <th:block th:replace="~{/km/customer/footer :: footerCSS}"></th:block>
 
-        <form th:action="@{/customer/join.do}" method="post"><br>
-            <input type="text" name="id" placeholder="아이디" autofocus><br>
-            <input type="text" name="pw" placeholder="비밀번호" value="1"><br>
-            <input type="text" name="name" placeholder="이름" value="이름"><br>
-            <input type="tel" name="phone" placeholder="핸드폰번호" value="01011111111"><br>
-            <input type="email" name="email" placeholder="이메일" value="a@naver.com"><br>
-            <input type="text" name="nickname" placeholder="닉네임" value="닉넴"><br>
-            <input type="radio" name="gender" value="M" >M &nbsp;
-            <input type="radio" name="gender" value="F" >F<br>
-            <input type="submit" value="가입">
-        </form>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <!-- axios (https://cdnjs.com/libraries/axios) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js" integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</head>
+
+<body>
+    <!-- header -->
+    <th:block th:replace="~{/se/customer/header :: headerHTML}"></th:block>
+    
+    <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
+    <div style="padding-bottom: 300px;">
+        <div class="container">
+            <form th:action="@{/customer/join.do}" method="post"><br>
+                <input type="text" name="id" placeholder="아이디" onkeyup="IdCheck(this)" autofocus><br>
+                <label id="idcheck">안녕하세요?</label>
+                <input type="text" name="pw" placeholder="비밀번호"><br>
+                <input type="text" name="name" placeholder="이름" value="이름"><br>
+                <input type="tel" name="phone" placeholder="핸드폰번호" value="01053535353"><br>
+                <input type="email" name="email" placeholder="이메일" value="e@emial.com"><br>
+                <input type="text" name="nickname" placeholder="닉네임" value="닉네임"><br>
+                <input type="radio" name="gender" value="M" >M &nbsp;
+                <input type="radio" name="gender" value="F" >F<br>
+                <button type="submit">회원가입</button>
+            </form>
+        </div>
+        
     </div>
+
+    <!-- footer -->
+    <th:block th:replace="~{/km/customer/footer :: footerHTML}"></th:block>
+    
+    <script th:inline="javascript" type="text/javascript">
+        async function IdCheck(e) {
+            // console.log(e.value);
+        if(e.value.length > 0){
+
+            const url = [[@{/api/idcheck.json}]] + `?id=${e.value}`;
+            const headers = {"Content-Type" : "application/json"};
+            const { data } = await axios.get(url, {headers});
+            // console.log(data.chk);
+
+            if(data.chk === 1){
+                document.getElementById("idcheck").innerText = "사용할 수 없는 아이디입니다";
+                document.getElementById("idcheck").style.color = 'red';
+            }
+            else if(data.chk === 0){
+                document.getElementById("idcheck").innerText = "사용할 수 있는 아이디입니다";
+            }
+            else if(data.chk === -1){
+                document.getElementById("idcheck").innerText = "error";
+            }
+
+        }
+        else {
+            document.getElementById("idcheck").innerText = "아이디를 입력하세요";
+        }
+
+        }
+    </script>
 </body>
 </html>
