--- a/src/main/resources/templates/jk/seller/login.html
+++ b/src/main/resources/templates/jk/seller/login.html
@@ -21,7 +21,7 @@
             <img th:src="@{/images/jk/logo1.png}" name="soboon" style="height: 150px;">
         </div>
 
-        <form th:action="@{/seller/loginaction.do}" method="get" id="form">
+        <form th:action="@{/seller/loginaction.do}" method="post" id="form">
             <div class="row">
                 <div class="col-sm">
                     <hr />
